--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
-* { box-sizing: border-box; margin: 0; padding: 0; }
+* { box-sizing: border-box; margin: 0; padding: 0; color: #fff; }
 
-body { font-family: Arial; }
+:root { font-size: 20px; }
+
+body {
+	font-family: Arial;
+	-webkit-user-select: none;
+	user-select: none;
+}
 
 .container {
-	height: 100vh;
-	width: 100vw;
+	font-size: 1rem;
+	height: 100vh; width: 100vw;
 	background-color: #151a20;
-	color: #fff;
 }
 
 .top {
@@ -37,4 +42,101 @@ body { font-family: Arial; }
 .dot.btn-zoom { background-color: #27c93f; }
 .dot.btn-zoom:hover { background-color: #3ad852; }
 
-.content { padding: 10px !important; }
+.app-body { padding: 20px; }
+
+.app-body input#taskInput {
+	font-size: 1rem;
+	height: 35px;
+	width: calc(100% - 10px);
+	padding: 5px;
+	padding-right: 40px;
+	border: none;
+	outline: none;
+	background: #28313b;
+}
+
+.app-body input#taskInput:focus { background: #2c343d; }
+
+.app-body button#taskSubmit {
+	font-size: 1rem;
+	margin-left: -40px;
+	height: 35px;
+	width: 40px;
+	border: none;
+	outline: none;
+	border-left: 2px solid #ccc;
+	background: #28313b;
+}
+
+.app-body button#taskSubmit:hover {
+	background: #424d5a;
+}
+
+.app-body ol { list-style: none; }
+.app-body ol li { display: list-item; margin-top: 12px; }
+.app-body ol li label { padding: 10px 20px; cursor: pointer; }
+.app-body ol li input[type="checkbox"] { position: absolute; opacity: 0; }
+
+.app-body ol li label {
+	background-color: rgba(40, 49, 59, 0.9);
+	color: #fff;
+	border-radius: 4px;
+	white-space: nowrap;
+	margin: 0 0 10px 0;
+	display: block;
+}
+
+.app-body ol li label::before {
+	display: inline-block;
+	margin: auto;
+	font-style: normal;
+	font-variant: normal;
+	text-rendering: auto;
+	-webkit-font-smoothing: antialiased;
+	font-family: "Font Awesome 5 Free";
+	font-weight: 400;
+	padding: 0;
+	margin-right: 5px;
+	content: "\f0c8";
+	color: rgba(255, 255, 255, 0.3);
+	position: absolute;
+	right: 30px;
+}
+
+.app-body ol li input[type="checkbox"]:checked + label::before {
+	font-family: "Font Awesome 5 Free";
+	content: "\f00c";
+	font-weight: 900;
+	color: #46bb73;
+	margin: auto;
+}
+
+.app-body ol li input[type="checkbox"]:checked + label {
+	color: #7c7c7c;
+}
+
+@media (prefers-reduced-motion: reduce) {
+	.app-body ol li label::before {
+		-webkit-transition: none;
+		-o-transition: none;
+		transition: none;
+	}
+}
+
+footer {
+	display: block;
+	height: 2rem;
+	text-align: left;
+	font-size: 1rem;
+	color: #9e9e9e;
+	width: 95%;
+	/* background: #2c343d; */
+	position: absolute;
+	bottom: 25px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+footer span {
+	color: #9e9e9e;
+}
