--- a/styles/index.css
+++ b/styles/index.css
@@ -103,7 +103,7 @@ body {
 	right: 30px;
 }
 
-.app-body ol li input[checked=""] + label::before {
+.app-body ol li input[checked="true"] + label::before {
 	font-family: "Font Awesome 5 Free";
 	content: "\f00c";
 	font-weight: 900;
@@ -111,7 +111,7 @@ body {
 	margin: auto;
 }
 
-.app-body ol li input[checked=""] + label {
+.app-body ol li input[checked="true"] + label {
 	color: #7c7c7c;
 }
 
